welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: type int
  var T= new Array[int] (num)
                   ^