welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T= new Array[int] (num)
  var a=1
  var i=0
  while (i!=num) {
    a+=1+golomb(i+1-golomb(golomb(i)))
    i+=1
  }
  return a
  
}